--- a/assets/styles/themes/_light.scss
+++ b/assets/styles/themes/_light.scss
@@ -129,9 +129,9 @@ $selected: rgba($primary, .5);
   --popover-border             : var(--border);
   --popover-text               : var(--body-text);
   --popover-border-radius      : var(--border-radius);
-  --tooltip-bg                 : var(--tag-bg);
-  --tooltip-border             : var(--tag-primary);
-  --tooltip-text               : var(--tag-primary);
+  --tooltip-bg                 : #{$darkest};
+  --tooltip-border             : #{$darkest};
+  --tooltip-text               : #{$lightest};
 
   --tabbed-border              : #{$medium};
   --tabbed-container-bg        : #f4f5fa;
